redesigned encoded data, and fixed download button overflow

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -23,7 +23,7 @@
   }
 
   .main .main-right {
-    flex: 0;
+    flex: 1;
   }
 }
 @media screen and (min-width: 1000px) {
