--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -5,7 +5,10 @@
 }
 
 .encoded-data {
-    max-width: 100%;
-    margin-top: 2rem;
-    overflow-wrap: break-word;
+  max-width: 100%;
+  margin-top: 2rem;
+}
+
+.encoded-data .subtitle {
+  word-break: break-all;
 }
